<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="puscas.mobilertapp.MainActivity">

    <puscas.mobilertapp.constants.CustomNumberPicker
        android:id="@+id/pickerScene"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/pickerShader"
        android:layout_alignBottom="@+id/pickerShader"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        tools:ignore="RtlHardcoded" />

    <puscas.mobilertapp.constants.CustomNumberPicker
        android:id="@+id/pickerShader"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <puscas.mobilertapp.constants.CustomNumberPicker
        android:id="@+id/pickerThreads"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/pickerShader"
        android:layout_alignBottom="@+id/pickerShader"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/time"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp" />

    <Button
        android:id="@+id/renderButton"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_below="@+id/pickerShader"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:text="@string/render"
        android:textAllCaps="false"
        android:textSize="17sp" />

    <puscas.mobilertapp.constants.CustomNumberPicker
        android:id="@+id/pickerSamplesPixel"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/renderButton"
        android:layout_toEndOf="@+id/pickerShader"
        android:layout_toRightOf="@+id/pickerShader"
        tools:ignore="RtlHardcoded" />

    <puscas.mobilertapp.constants.CustomNumberPicker
        android:id="@+id/pickerSamplesLight"
        android:layout_width="30dp"
        android:layout_height="60dp"
        android:layout_above="@+id/drawLayout"
        android:layout_toStartOf="@+id/pickerSize"
        android:layout_toLeftOf="@+id/pickerSize"
        tools:ignore="RtlHardcoded" />

    <puscas.mobilertapp.constants.CustomNumberPicker
        android:id="@+id/pickerAccelerator"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/renderButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@+id/pickerSamplesPixel"
        android:layout_toLeftOf="@+id/pickerSamplesPixel"
        tools:ignore="RtlHardcoded" />

    <puscas.mobilertapp.constants.CustomNumberPicker
        android:id="@+id/pickerSize"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_above="@+id/drawLayout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:ignore="RtlHardcoded" />

    <puscas.mobilertapp.DrawView
        android:id="@+id/drawLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/timeText"
        android:layout_below="@+id/pickerSamplesPixel"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded" />

    <CheckBox
        android:id="@+id/preview"
        android:layout_width="82dp"
        android:layout_height="17dp"
        android:layout_below="@+id/pickerShader"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/preview" />

</RelativeLayout>
